k8s/manifests/zed-api-server/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: zed-api-server
spec:
  selector:
    app: zed-api-server
  ports:
    - port: 80
      targetPort: 8080
